题解增加评论功能

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,7 @@ spring:
         max-idle: 300
         min-idle: 10
         max-active: 100
+    password: ahutoj4077
   output:
     ansi:
       enabled: always
